added more time slots

--- a/index.html
+++ b/index.html
@@ -105,6 +105,21 @@
         </button>
       </div>
 
+      <div id="hour-17" class="row time-div">
+        <div class="col-md-1 hour text-center py-3"><span id="17">5pm</span></div>
+        <textarea class="col-md-10 time-block description" placeholder="Add schedule item here" rows="3"></textarea>
+        <button class="col-md-1 saveBtn" aria-label="save button 5pm">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div id="hour-18" class="row time-div">
+        <div class="col-md-1 hour text-center py-3"><span id="18">6pm</span></div>
+        <textarea class="col-md-10 time-block description" placeholder="Add schedule item here" rows="3"></textarea>
+        <button class="col-md-1 saveBtn" aria-label="save button 6pm">
+          <i class="fas fa-save"></i>
+        </button>
+        
+
 </div>
       
 
